include/dtl/bindings/c/dtl_span.h

/**
 * @brief Get owning rank metadata
 * @param span The span
 * @return Rank id, or DTL_NO_RANK on error
 */
DTL_API dtl_rank_t dtl_span_rank(dtl_span_t span);
/**
 * @brief Get number of ranks metadata
 * @param span The span
 * @return Number of ranks, or 0 on error
 */
DTL_API dtl_rank_t dtl_span_num_ranks(dtl_span_t span);
/* ==========================================================================
 * Span Element Access (Local)
 * ========================================================================== */

/**
 * @brief Read a local element by local index
 *
 * @param span The span
 * @param local_idx Local index
 * @param[out] value Pointer to output value buffer (dtype-sized)
 * @return DTL_SUCCESS on success, error code otherwise
 */
DTL_API dtl_status dtl_span_get_local(
    dtl_span_t span,
    dtl_size_t local_idx,
    void* value);
/**
 * @brief Write a local element by local index
 *
 * @param span The span
 * @param local_idx Local index
 * @param value Pointer to input value buffer (dtype-sized)
 * @return DTL_SUCCESS on success, error code otherwise
 */
DTL_API dtl_status dtl_span_set_local(
    dtl_span_t span,
    dtl_size_t local_idx,
    const void* value);
/* ==========================================================================
 * Subspan Views
 * ========================================================================== */

/**
 * @brief Create a span view of the first @p count local elements
 *
 * @param span Source span
 * @param count Number of local elements
 * @param[out] out_span Output span
 * @return DTL_SUCCESS on success, error code otherwise
 */
DTL_API dtl_status dtl_span_first(
    dtl_span_t span,
    dtl_size_t count,
    dtl_span_t* out_span);
/**
 * @brief Create a span view of the last @p count local elements
 *
 * @param span Source span
 * @param count Number of local elements
 * @param[out] out_span Output span
 * @return DTL_SUCCESS on success, error code otherwise
 */
DTL_API dtl_status dtl_span_last(
    dtl_span_t span,
    dtl_size_t count,
    dtl_span_t* out_span);
/**
 * @brief Create a local subspan view
 *
 * If @p count is DTL_SPAN_NPOS, the subspan runs from @p offset to end.
 *
 * @param span Source span
 * @param offset Local start index
 * @param count Local element count or DTL_SPAN_NPOS
 * @param[out] out_span Output span
 * @return DTL_SUCCESS on success, error code otherwise
 */
DTL_API dtl_status dtl_span_subspan(
    dtl_span_t span,
    dtl_size_t offset,
    dtl_size_t count,
    dtl_span_t* out_span);
/* ==========================================================================
 * Validation
 * ========================================================================== */

/**
 * @brief Check if a span handle is valid
 *
 * @param span The span to check (may be NULL)
 * @return 1 if valid, 0 otherwise
 */
DTL_API int dtl_span_is_valid(dtl_span_t span);