bindings/fortran/dtl_containers.f90


        function dtl_span_rank(span) bind(c, name='dtl_span_rank')
            import :: c_ptr, c_int
            type(c_ptr), value :: span
            integer(c_int) :: dtl_span_rank
        end function

        function dtl_span_num_ranks(span) bind(c, name='dtl_span_num_ranks')
            import :: c_ptr, c_int
            type(c_ptr), value :: span
            integer(c_int) :: dtl_span_num_ranks
        end function

        function dtl_span_get_local(span, local_idx, value) &
                bind(c, name='dtl_span_get_local')
            import :: c_ptr, c_int, c_int64_t
            type(c_ptr), value :: span
            integer(c_int64_t), value :: local_idx
            type(c_ptr), value :: value
            integer(c_int) :: dtl_span_get_local
        end function

        function dtl_span_set_local(span, local_idx, value) &
                bind(c, name='dtl_span_set_local')
            import :: c_ptr, c_int, c_int64_t
            type(c_ptr), value :: span
            integer(c_int64_t), value :: local_idx
            type(c_ptr), value :: value
            integer(c_int) :: dtl_span_set_local
        end function

        function dtl_span_first(span, count, out_span) &
                bind(c, name='dtl_span_first')
            import :: c_ptr, c_int, c_int64_t
            type(c_ptr), value :: span
            integer(c_int64_t), value :: count
            type(c_ptr), intent(out) :: out_span
            integer(c_int) :: dtl_span_first
        end function

        function dtl_span_last(span, count, out_span) &
                bind(c, name='dtl_span_last')
            import :: c_ptr, c_int, c_int64_t
            type(c_ptr), value :: span
            integer(c_int64_t), value :: count
            type(c_ptr), intent(out) :: out_span
            integer(c_int) :: dtl_span_last
        end function

        function dtl_span_subspan(span, offset, count, out_span) &
                bind(c, name='dtl_span_subspan')
            import :: c_ptr, c_int, c_int64_t
            type(c_ptr), value :: span
            integer(c_int64_t), value :: offset
            integer(c_int64_t), value :: count
            type(c_ptr), intent(out) :: out_span
            integer(c_int) :: dtl_span_subspan
        end function

        function dtl_span_is_valid(span) bind(c, name='dtl_span_is_valid')
            import :: c_ptr, c_int
            type(c_ptr), value :: span
            integer(c_int) :: dtl_span_is_valid
        end function

    end interface

end module dtl_containers
